--- a/jorge/css/master.css
+++ b/jorge/css/master.css
@@ -48,3 +48,11 @@
   	border-collapse: collapse;
   	border-spacing: 0;
   }
+
+/* Definições para TODOS os devices */
+
+/* Importa a Roboto fonte */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+body {
+  font-family: 'Roboto', sans-serif;
+}
