--- a/jorge/css/master.css
+++ b/jorge/css/master.css
@@ -147,14 +147,14 @@ header {
   background-size: cover;
 }
 
-@media screen and (min-width: 450px){
+@media screen and (min-width: 28em){
   header {
     height: 13em;
   }
 }
 
 
-@media screen and (min-width: 648px){
+@media screen and (min-width: 42em){
   nav ul {
     display: list-item;
     list-style: none;
@@ -201,7 +201,7 @@ header {
   }
 }
 
-@media screen and (min-width: 1400px){
+@media screen and (min-width: 87em){
   header {
     height: 400px;
   }
